// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spinner (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Canceled
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > clear > stops and clears the spinner from the output 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  Loading",
  "<cursor.left count=1>",
  "<erase.down>",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<magenta>◒</fg>  foo",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > indicator customization > custom delay 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◐</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◓</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◑</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > indicator customization > custom frame style 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>◐</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>◓</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>◑</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > indicator customization > custom frames 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>🐴</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>🦋</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>🐙</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>🐶</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > indicator customization > custom frames with lots of frame have consistent ellipsis display 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>0</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>1</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>2</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>3</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>4</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>5</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>6</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>7</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>8</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>9</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>0</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>1</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>2</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>3</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>4</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>5</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>6</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>7</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>8</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>9</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>0</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>1</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>2</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>3</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>4</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>5</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>6</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>7</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>8</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>9</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>0</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>1</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>2</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>3</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>4</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>5</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>6</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>7</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>8</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>9</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>0</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>1</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>2</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>3</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>4</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>5</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>6</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>7</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>8</fg>  .",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>9</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>0</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>1</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>2</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>3</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>4</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>5</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>6</fg>  ..",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>7</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>8</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>9</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>0</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>1</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>2</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>3</fg>  ...",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > message > sets message for next frame 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◐</fg>  foo",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > process exit handling > prioritizes cancel option over global setting 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Spinner cancel message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > process exit handling > prioritizes error option over global setting 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>▲</fg>  Spinner error message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Custom cancel message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>▲</fg>  Custom error message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses default cancel message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Canceled
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Global cancel message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses global custom error message from settings 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>▲</fg>  Global error message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > start > handles multi-line messages 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  foo
bar
baz",
  "<cursor.up count=2>",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > start > handles wrapping 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
xxxxxxxxxxxxx",
  "<cursor.up count=1>",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  stopped
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > start > renders frames at interval 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◐</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◓</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◑</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > start > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  foo",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > start > renders timer when indicator is "timer" 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>   [0s]",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>   [0s]
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > stop > renders cancel symbol when calling cancel() 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>■</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > stop > renders error symbol when calling error() 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>▲</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > stop > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > stop > renders message when cancelling 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>■</fg>  too dizzy — spinning cancelled
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > stop > renders message when erroring 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>▲</fg>  error: spun too fast!
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > stop > renders message without removing dots 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo.
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > stop > renders submit symbol and stops spinner 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<magenta>◒</fg>  foo",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Canceled
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > clear > stops and clears the spinner from the output 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  Loading...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<magenta>◒</fg>  foo...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > indicator customization > custom delay 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > indicator customization > custom frame style 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > indicator customization > custom frames 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>🐴</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > indicator customization > custom frames with lots of frame have consistent ellipsis display 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>0</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > message > sets message for next frame 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<magenta>◐</fg>  foo...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > process exit handling > prioritizes cancel option over global setting 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Spinner cancel message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > process exit handling > prioritizes error option over global setting 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>▲</fg>  Spinner error message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Custom cancel message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>▲</fg>  Custom error message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses default cancel message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Canceled
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>■</fg>  Global cancel message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses global custom error message from settings 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<red>▲</fg>  Global error message
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > start > handles multi-line messages 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  foo
bar
baz...",
  "
",
  "<cursor.up count=2>",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > start > handles wrapping 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
xxxxxxxxxxxxx...",
  "
",
  "<cursor.up count=1>",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  stopped
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > start > renders frames at interval 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > start > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  foo...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > start > renders timer when indicator is "timer" 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>   [0s]
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > stop > renders cancel symbol when calling cancel() 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>■</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > stop > renders error symbol when calling error() 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>▲</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > stop > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > stop > renders message when cancelling 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>■</fg>  too dizzy — spinning cancelled
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > stop > renders message when erroring 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<red>▲</fg>  error: spun too fast!
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > stop > renders message without removing dots 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo.
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > stop > renders submit symbol and stops spinner 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
",
  "<magenta>◒</fg>  ...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;

exports[`spinner (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<magenta>◒</fg>  foo...",
  "
",
  "<cursor.left count=1>",
  "<erase.down>",
  "<green>◇</fg>  
",
  "<cursor.show>",
]
`;
